# coursework

./: Board.cpp  Board.h  CMakeLists.txt  Control.h  Drawable.cpp  Drawable.hpp  Game.cpp  Game.h  GameState.h  Level.h  Menu.cpp  Menu.h  Palette.cpp  Pearson.cpp  Pearson.h  Point.hpp  Screen.cpp  Screen.h  coursework.pro  coursework.pro.user.6e28fd8  level.cpp  main.cpp  palette.h
App/: main.cpp
doc/: Readme.md
include/: Board.h  Board.hpp  Bonus.hpp  Cactus_1.hpp  Drawable.hpp  Drawable_Rect.hpp  Drawable_Str.hpp  Game.h  Game.hpp  GameState.h  Menu.hpp  Pearson.h  Screen.hpp  T_Rex.hpp  T_Rex_Step.hpp  palette.hpp
src/: Board.cpp  Bonus.cpp  Cactus_1.cpp  Drawable.cpp  Drawable_Rect.cpp  Drawable_Str.cpp  Game.cpp  Menu.cpp  Palette.cpp  Pearson.cpp  Point.cpp  Screen.cpp  T_Rex.cpp  T_Rex_Step.cpp
textures/: Loss.trx  cactus_big.trx  cactus_small.trx  logo.trx  moon.trx  sun.trx  trx_move1.trx  trx_move2.trx
